--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
         "@mdi/js": "^7.1.96",
         "@vueuse/core": "^9.11.1",
         "axios": "^1.2.3",
+        "jsoneditor": "^9.10.0",
         "lodash": "^4.17.21",
         "vue": "^2.7.14",
         "vue-i18n": "8.27.2",
