--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,15 @@
-pymongo==3.12.3
-pydantic==1.9.0
-motor==2.5.1
-fastapi==0.74.1
-uvicorn==0.17.5
-Jinja2==3.0.3
-python-dotenv==0.19.2
+pymongo==4.6.0
+pydantic==2.4.2
+pydantic-settings==2.0.3
+motor==3.3.1
+fastapi==0.104.1
+uvicorn==0.24.0.post1
+#Jinja2==3.1.2
+python-dotenv==1.0.0
 mergedeep==1.3.4
-jsonschema==4.4.0
-asyncstdlib==3.10.3
-requests==2.28.1
+jsonschema==4.19.2
+asyncstdlib==3.10.9
+requests==2.31.0
+authlib==1.2.1
+itsdangerous==2.1.2
+httpx==0.25.1
